<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#00897b">

            <ImageView
                android:id="@+id/info_cursor"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/leftarrow" />

            <TextView
                android:id="@+id/logo_home_text"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/info_cursor"
                android:gravity="center"
                android:text="@string/WifiAHM"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/setting_details"
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:src="@drawable/more" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/wifiimg"
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                    android:src="@drawable/wificonnection" />

                <TextView
                    android:id="@+id/wifiname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_toRightOf="@id/wifiimg"
                    android:text="@string/DLink"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </RelativeLayout>


        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ipadr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/ipadr"
                android:textColor="#00897b"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/ipadr_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/ipadr"
                android:layout_marginRight="30dp"
                android:layout_marginTop="-42dp"
                android:text="@string/ipAddress"
                android:textSize="20dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dns1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/dns1"
                android:textColor="#00897b"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/dns_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/dns1"
                android:layout_marginRight="30dp"
                android:layout_marginTop="-42dp"
                android:text="@string/dns"
                android:textSize="20dp" />
        </RelativeLayout>

        <RelativeLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dns2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/dns2"
                android:textColor="#00897b"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/dns_value2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/dns2"
                android:layout_marginRight="30dp"
                android:layout_marginTop="-42dp"
                android:text="@string/dns2_value"
                android:textSize="20dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/gateway"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/gatway"
                android:textColor="#00897b"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/gate_way"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/gateway"
                android:layout_marginRight="30dp"
                android:layout_marginTop="-42dp"
                android:text="@string/gtway"
                android:textSize="20dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/netmsk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/netmask"
                android:textColor="#00897b"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/net_mask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/netmsk"
                android:layout_marginRight="30dp"
                android:layout_marginTop="-42dp"
                android:text="@string/mask"
                android:textSize="20dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lease_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/leasetime"
                android:textColor="#00897b"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/leasetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/lease_time"
                android:layout_marginRight="30dp"
                android:layout_marginTop="-42dp"
                android:text="@string/ltime"
                android:textSize="20dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/bssid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/bssid"
                android:textColor="#00897b"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/bssid"
                android:layout_marginRight="30dp"
                android:layout_marginTop="-42dp"
                android:text="@string/macAddress"
                android:textSize="20dp"
                android:id="@+id/bss_id"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
            </com.google.android.gms.ads.AdView>

        </RelativeLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>