<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/rec_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:src="@drawable/thief" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_toRightOf="@+id/rec_image">

        <TextView
            android:id="@+id/ip_rec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/ipAddress"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mac_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ip_rec"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/macAddress"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/vendor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mac_address"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/compnyName"
            android:textColor="#009688"
            android:textSize="20dp" />

    </RelativeLayout>

</RelativeLayout>