<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hitesh.wifiahm.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#f5f4f1"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="58dp"
            tools:layout_editor_absoluteY="16dp">

            <RelativeLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#00897b"
                android:gravity="center">

                <TextView
                    android:id="@+id/logo_home_text"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:gravity="center"
                    android:text="@string/WifiAHM"
                    android:textColor="@android:color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/info"
                    android:layout_width="30dp"
                    android:layout_height="50dp"
                    android:layout_toLeftOf="@+id/setting"
                    android:clickable="true"
                    android:src="@drawable/info" />

                <ImageView
                    android:id="@+id/setting"
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:clickable="true"
                    android:src="@drawable/more" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/imageLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/circle_drawble" />

                    <ImageView
                        android:id="@+id/current_wifi_sign"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="25dp"
                        android:src="@drawable/antenna" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/routername"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginLeft="30dp"
                        android:gravity="center"
                        android:text="@string/DLink"
                        android:textColor="#009688"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/ipAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_below="@+id/routername"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="-20dp"
                        android:gravity="center"
                        android:text="@string/currentIpAddress"
                        android:textColor="#009688"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/macAdress"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_below="@+id/ipAddress"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="-20dp"
                        android:gravity="center"
                        android:text="@string/macAddress"
                        android:textColor="#009688"
                        android:textSize="15dp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/header_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <ImageView
                android:id="@+id/image_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_marginTop="170dp"
                android:clickable="true"
                android:src="@drawable/circle_drawble_count" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="33dp"
                android:layout_marginTop="180dp"
                android:src="@drawable/scanipimage"

                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/connected_devices_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_layout">

            <ImageView
                android:id="@+id/connected_devices_image"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:src="@drawable/wificonnection" />

            <TextView
                android:id="@+id/number_of_devices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_toRightOf="@+id/connected_devices_image"
                android:gravity="center"
                android:text="@string/number_of_connected"
                android:textSize="18dp" />
        </RelativeLayout>

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/connected_devices_layout">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="200dp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
               android:visibility="invisible"
                />
        </RelativeLayout>


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
